<resources>
    <string name="app_name">BizApp</string>
    <string name="username_hint">Username</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account? Sign in</string>
    <string name="resend_verification">Resend verification SMS? Resend</string>
    <string name="verify_phone">Verify phone? Verify phone</string>
    <string name="create_account">Create Account</string>
    <string name="login">Sign In</string>
    <string name="phone_hint">Phone</string>
    <string name="dont_have_account">Dont have an account? Sign up</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pass">Forgot password</string>
    <string name="title_activity_side_nav">SideNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>