<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:padding="10dp"
    tools:context=".SignUpActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textAllCaps="true"
        android:textSize="26sp"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:layout_gravity="left"
        >

    </TextView>


    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ProgressBar>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <EditText
            android:id="@+id/nameId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <EditText
            android:id="@+id/emailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <EditText
            android:id="@+id/phoneId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <EditText
            android:id="@+id/passwordId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <EditText
            android:id="@+id/confirm_password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnRegister"
        android:layout_gravity="right"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:background="@color/lightblue"
        android:text="@string/register">

    </Button>


    <TextView
        android:id="@+id/txtSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        >

    </TextView>

    <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_verification"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        >

    </TextView>

    <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_phone"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        >

    </TextView>
</LinearLayout>