<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/blue"
    android:padding="10dp"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textSize="26sp"

            android:textColor="@color/white"
            android:layout_gravity="left"
            >

        </TextView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ProgressBar>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/phoneId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <EditText
                android:id="@+id/passwordId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textColor="@color/white"
                android:layout_centerVertical="true"

                >

            </TextView>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                >

            </TextView>
        </RelativeLayout>



        <Button
            android:id="@+id/btnLogin"
            android:layout_gravity="right"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@color/lightblue"
            android:text="@string/login">

        </Button>




    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_account"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        >

    </TextView>


</RelativeLayout>